// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> default should render a plain button with default props 1`] = `
<styled.button
  backgroundColor="#c05b4d"
  color="#fefefe"
  fontSize="medium"
>
  Button Text
</styled.button>
`;

exports[`<Button /> default should render a plain button with other props 1`] = `
<styled.button
  backgroundColor="#ffffff"
  color="blue"
  fontSize="medium"
>
  Button Text
</styled.button>
`;

exports[`<Button /> when a hero button should render a hero button with boolean true 1`] = `
<styled.button
  backgroundColor="#c05b4d"
  borderColor="#732419"
  color="#fefefe"
  fontSize="medium"
>
  Button Text
</styled.button>
`;

exports[`<Button /> when a hero button should render a hero button with other props 1`] = `
<styled.button
  backgroundColor="#ffffff"
  borderColor="#000000"
  color="blue"
  fontSize="medium"
  style="text-align: center;"
>
  Button Text
</styled.button>
`;
